<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginActivity"
    android:background="@drawable/nightimg">

<!--    <ImageButton-->
<!--        android:id="@+id/kakaologin"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/kakao_login_medium_narrow"-->
<!--        android:background="@android:color/transparent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_marginBottom="40dp"-->
<!--        />-->

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="60sp"
        android:layout_margin="100dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/email"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:layout_margin="100dp"
        android:inputType="textEmailAddress"
        android:gravity="center"/>

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/password"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:gravity="center"/>

    <Button
        android:id="@+id/btnemaillogin"
        android:textColor="@color/white"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/login_text"
        android:background="@color/deep_blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/auto_login" />

    <Button
        android:id="@+id/btnregister"
        android:text="@string/register"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:textColor="@color/white"
        android:background="@color/deep_blue"
        app:layout_constraintTop_toBottomOf="@+id/btnemaillogin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintBottom_toTopOf="@id/btnemaillogin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:text="@string/auto_login"
        android:textColor="@color/white"
        android:layout_marginTop="10dp"
        android:id="@+id/auto_login"
        />

</androidx.constraintlayout.widget.ConstraintLayout>