<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/deep_blue"
    android:paddingHorizontal="20dp"
    android:paddingVertical="10dp">


    <TextView
        android:fontFamily="@font/songmyung_regular"
        android:id="@+id/question"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/question_title"
        android:textStyle="bold"
        android:textSize="26sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="17dp"
        android:textColor="@color/light_grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:fontFamily="@font/maruburi_regular"
        android:id="@+id/sub"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nick"
        android:textStyle="bold"
        android:textSize="15sp"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="20dp"
        android:textColor="@color/grey"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question"/>

    <TextView
        android:fontFamily="@font/maruburi_semibold"
        android:id="@+id/text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="8dp"
        android:text="@string/text"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub"
        app:layout_constraintBottom_toBottomOf="parent"
        android:maxLines="1"/>


</androidx.constraintlayout.widget.ConstraintLayout>