<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.SignUpActivity"
    android:background="@drawable/nightimg">

    <TextView
        android:id="@+id/AppTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="70sp"
        android:layout_margin="100dp"/>


    <EditText
        android:id="@+id/email"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/AppTitle"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/email"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:layout_margin="80dp"
        android:inputType="textEmailAddress"
        android:gravity="center"/>

    <TextView
        android:id="@+id/warning_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        />

    <EditText
        android:id="@+id/password"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/warning_email"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/password"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:gravity="center"/>

    <TextView
        android:id="@+id/warning_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password"
        />

    <EditText
        android:id="@+id/password2"
        android:layout_width="220dp"
        android:layout_height="wrap_content"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/warning_password"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/password"
        android:layout_margin="20dp"
        android:inputType="textPassword"
        android:gravity="center"/>

    <TextView
        android:id="@+id/warning_password2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password2"
        />

    <EditText
        android:id="@+id/nickname"
        android:layout_width="220dp"
        android:textColorHint="@color/light_grey"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/warning_password2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:hint="@string/nickname"
        android:layout_margin="20dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/warning_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/red"
        android:textSize="12sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        />
    <Button
        android:id="@+id/btnregister"
        android:text="@string/register_text"
        android:background="@color/deep_blue"
        android:textColor="@color/white"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintTop_toBottomOf="@+id/nickname"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="50dp"/>

    <Button
        android:id="@+id/back"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/goback"
        android:textColor="@color/white"
        android:background="@color/deep_blue"
        app:layout_constraintTop_toBottomOf="@+id/btnregister"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="50dp"
        android:layout_marginTop="10dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>