<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/drawer_layout"
    tools:openDrawer="start"
    tools:context=".MainContentActivity"
    android:background="@drawable/nightimg">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center">

            <TextView
                android:id="@+id/question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="80dp"
                android:text="로딩중"
                android:layout_marginTop="180dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/main_sub_title"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <TextView
                android:id="@+id/main_sub_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_sub_title"
                android:textSize="27sp"
                android:textColor="@color/light_grey"
                app:layout_constraintTop_toBottomOf="@+id/question"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/write"
                android:layout_marginTop="10dp"/>

            <EditText
                android:id="@+id/write"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:minHeight="60dp"
                android:maxHeight="400dp"
                android:textSize="20sp"
                android:padding="10dp"
                android:textColor="#FFFFFF"
                android:singleLine = "false"
                android:scrollHorizontally = "false"
                android:inputType="textMultiLine"
                android:background="@color/white_"
                android:layout_marginTop="20dp"
                android:maxLength="400"
                app:autoSizeTextType="uniform"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_sub_title"
                app:layout_constraintBottom_toTopOf="@+id/checkBox"/>

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alone"
                android:textColor="@color/light_grey"
                app:layout_constraintTop_toBottomOf="@+id/write"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/completebtn"
                android:textSize="18sp"
                android:layout_marginTop="30dp"/>

            <Button
                android:id="@+id/completebtn"
                android:layout_width="180dp"
                android:layout_height="40dp"
                android:background="@color/deep_blue"
                android:text="@string/complete"
                android:textSize="17dp"
                android:textColor="#FFFFFF"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="100dp"
                app:layout_constraintTop_toBottomOf="@+id/checkBox"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <include
        layout="@layout/appbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>


    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/close" />

    <Button
        android:id="@+id/close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        android:background="@color/none"
        android:textSize="30sp"
        android:textColor="@color/chacole"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>
    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:background="@color/blue"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:menu="@menu/nav_menu"
        app:itemTextColor="@color/white"
        app:headerLayout="@layout/nav_header"/>

</androidx.drawerlayout.widget.DrawerLayout>